objects/AC12__c.object
<CustomObject>
    <description>sadfasdcadxxx</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked_c__c</fullName>
        <label>Hours_Worked__c</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone_number</label>
        <type>Phone</type>
    </fields>
    <label>AC12</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AC12 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC12s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>